fix alignment for sunday morning

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -208,7 +208,7 @@ $color-dark-blue: #002d54;
         }
     }
     .article-heading {
-        margin-top: 6em;
+        // margin-top: 6em;
         .title {
             font-family: $font-headings-sans;
             font-size: 40px;
